// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signature Android renders with custom styles 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "borderColor": "orange",
      },
    ]
  }
  testID="signature-test"
>
  <View
    style={
      {
        "backgroundColor": "#FFF",
        "flex": 1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <RNCWebView
        allowFileAccess={false}
        allowsFullscreenVideo={false}
        androidHardwareAccelerationDisabled={false}
        androidLayerType="none"
        bounces={false}
        cacheEnabled={true}
        javaScriptEnabled={true}
        messagingEnabled={true}
        messagingModuleName="WebViewMessageHandler2"
        nestedScrollEnabled={false}
        onHttpError={[Function]}
        onLoadingError={[Function]}
        onLoadingFinish={[Function]}
        onLoadingProgress={[Function]}
        onLoadingStart={[Function]}
        onMessage={[Function]}
        onRenderProcessGone={[Function]}
        onShouldStartLoadWithRequest={[Function]}
        overScrollMode="always"
        saveFormDataDisabled={false}
        scalesPageToFit={true}
        setBuiltInZoomControls={true}
        setDisplayZoomControls={false}
        setSupportMultipleWindows={true}
        style={
          [
            {
              "flex": 1,
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#ffffff",
            },
            undefined,
          ]
        }
        thirdPartyCookiesEnabled={true}
        useWebKit={true}
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <ActivityIndicator />
    </View>
  </View>
  <View
    style={
      {
        "backgroundColor": "red",
        "flexDirection": "row",
        "paddingTop": 16,
      }
    }
  >
    <View
      accessible={false}
      background="Ripple"
      onPress={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "red",
          "borderColor": "#0595DB",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flex": 1,
          "justifyContent": "center",
          "marginRight": 8,
          "paddingHorizontal": 8,
          "paddingVertical": 8,
        }
      }
      testID="signature-test$ClearButton$Touchable"
      useForeground={true}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "red",
            "borderColor": "#0595DB",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "flex": 1,
            "justifyContent": "center",
            "marginRight": 8,
            "overflow": "hidden",
            "paddingHorizontal": 8,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "black",
              "fontSize": 12,
              "fontWeight": "bold",
              "lineHeight": 18,
            }
          }
          testID="signature-test$ClearButton$caption"
        >
          Clear
        </Text>
      </View>
    </View>
    <View
      accessible={false}
      background="Ripple"
      onPress={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "red",
          "borderColor": "#0595DB",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flex": 1,
          "justifyContent": "center",
          "marginLeft": 8,
          "paddingHorizontal": 8,
          "paddingVertical": 8,
        }
      }
      testID="signature-test$SaveButton$Touchable"
      useForeground={true}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "red",
            "borderColor": "#0595DB",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": 8,
            "overflow": "hidden",
            "paddingHorizontal": 8,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "black",
              "fontSize": 12,
              "fontWeight": "bold",
              "lineHeight": 18,
            }
          }
          testID="signature-test$SaveButton$caption"
        >
          Save
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Signature Android renders with default styles 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {},
    ]
  }
  testID="signature-test"
>
  <View
    style={
      {
        "backgroundColor": "#FFF",
        "flex": 1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <RNCWebView
        allowFileAccess={false}
        allowsFullscreenVideo={false}
        androidHardwareAccelerationDisabled={false}
        androidLayerType="none"
        bounces={false}
        cacheEnabled={true}
        javaScriptEnabled={true}
        messagingEnabled={true}
        messagingModuleName="WebViewMessageHandler1"
        nestedScrollEnabled={false}
        onHttpError={[Function]}
        onLoadingError={[Function]}
        onLoadingFinish={[Function]}
        onLoadingProgress={[Function]}
        onLoadingStart={[Function]}
        onMessage={[Function]}
        onRenderProcessGone={[Function]}
        onShouldStartLoadWithRequest={[Function]}
        overScrollMode="always"
        saveFormDataDisabled={false}
        scalesPageToFit={true}
        setBuiltInZoomControls={true}
        setDisplayZoomControls={false}
        setSupportMultipleWindows={true}
        style={
          [
            {
              "flex": 1,
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#ffffff",
            },
            undefined,
          ]
        }
        thirdPartyCookiesEnabled={true}
        useWebKit={true}
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <ActivityIndicator />
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "paddingTop": 16,
      }
    }
  >
    <View
      accessible={false}
      background="Ripple"
      onPress={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "#0595DB",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flex": 1,
          "justifyContent": "center",
          "marginRight": 8,
          "paddingHorizontal": 8,
          "paddingVertical": 8,
        }
      }
      testID="signature-test$ClearButton$Touchable"
      useForeground={true}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#0595DB",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "flex": 1,
            "justifyContent": "center",
            "marginRight": 8,
            "overflow": "hidden",
            "paddingHorizontal": 8,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "#0595DB",
              "fontSize": 12,
              "fontWeight": "bold",
              "lineHeight": 18,
            }
          }
          testID="signature-test$ClearButton$caption"
        >
          Clear
        </Text>
      </View>
    </View>
    <View
      accessible={false}
      background="Ripple"
      onPress={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#0595DB",
          "borderColor": "#0595DB",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flex": 1,
          "justifyContent": "center",
          "marginLeft": 8,
          "paddingHorizontal": 8,
          "paddingVertical": 8,
        }
      }
      testID="signature-test$SaveButton$Touchable"
      useForeground={true}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#0595DB",
            "borderColor": "#0595DB",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": 8,
            "overflow": "hidden",
            "paddingHorizontal": 8,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFF",
              "fontSize": 12,
              "fontWeight": "bold",
              "lineHeight": 18,
            }
          }
          testID="signature-test$SaveButton$caption"
        >
          Save
        </Text>
      </View>
    </View>
  </View>
</View>
`;
